# MoneyLoser

./: .env.example  .gitignore  README.md  pyproject.toml  start_stress_test.sh
config/: default.yaml  live.yaml  paper-soak.yaml  paper.yaml  stress-test.yaml
config/models/: crypto.yaml  general.yaml  weather.yaml
docs/: sports_roadmap.md
notebooks/: 01_market_exploration.ipynb  02_model_training.ipynb
scripts/: analyze_trades.py  backfill_crypto_context.py  backfill_historical.py  chaos_recovery.py  circuit_breaker_drill.py  dashboard.py  emergency_cancel_all.py  ingest_historical.py  ingest_settled.py  live_snapshots.py  record_data.py  run_backtest.py  run_live.py  run_workers.py  sbr_backfill.py  sports_training.py  stale_sports_drill.py  train_all_models.py  train_full_models.py  train_models.py  train_weather_model.py  weather_backtest.py  web_dashboard.py  worker_collector.py  worker_execution.py  worker_market_data.py  worker_monitor.py
src/moneygone/: __init__.py  app.py  config.py
tests/: conftest.py
tests/fixtures/: sample_markets.json  sample_orderbook.json  sample_weather_ensemble.json
tests/integration/: test_backtest_engine.py  test_data_store.py
tests/unit/: test_app_bootstrap.py  test_artifact_runtime.py  test_backtest_data_loader.py  test_calibration.py  test_capital_governor.py  test_chaos_recovery.py  test_edge.py  test_env.py  test_execution_engine.py  test_features.py  test_fees.py  test_game_winner_data.py  test_kelly.py  test_live_snapshots.py  test_market_discovery.py  test_order_manager.py  test_resolution_sniper.py  (+11 more)
(+111 files in other folders)
