[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moneygone"
version = "0.1.0"
description = "Automated Kalshi prediction market trading system"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "ccxt>=4.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "structlog>=24.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moneygone"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that hit external APIs or databases",
]
